# booster_robot

./: CMakeLists.txt  LICENSE  package.xml
python/: robot.py
srdf/: T1_Serial.srdf  box.srdf
urdf/: T1_Serial.urdf  box.urdf
